# ecs-game-architecture

./: CMakeLists.txt  EntityTags.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  Readme.md  include.h  main.cpp
Components/: Network.h  PlayerType.h  Position.h  Texture.h  TileMap.h
ResourceManagers/: TextureManager.cpp  TextureManager.h
Scenes/: MainScene.cpp  MainScene.h  Scene.cpp  Scene.h
Systems/: AnimationHandler.cpp  AnimationHandler.h  Movement.cpp  Movement.h  Render.cpp  Render.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h
assets/: map.txt
constants/: EntityEvents.h
factory/: creation.h
